# HDisk

./: HDisk.cabal  LICENSE  stack.yaml
src/: Main.hs
