name:                HDisk
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/liu916/HDisk#readme
license:             BSD3
license-file:        LICENSE
author:              Anthony Liu
maintainer:          liu916@gmail.com
copyright:           2017 Anthony Liu
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable HDisk
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , stm
                     , mtl
                     , containers >= 0.5.8
